--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,13 @@
 ---
 # tasks file for ansible-role-motd
+
+- name: setup
+  copy:
+    content: "{{ motd_message }}"
+    dest: /etc/motd
+    owner: "{{ motd_owner }}"
+    group: "{{ motd_group }}"
+    mode: "{{ motd_mode }}"
+  become: true
+  tags:
+    - motd
